tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__HeyDJMixit-AAAAAAAAAAAAAAAAAAACKg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 554,
  "prerequisites": [
    88
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The mixer is a very useful device. You can mix all kinds of fluids and items. Useful to prevent dust from falling to the ground when crafting - most mixer recipes give a slight boost over hand crafting!\n\nYou get +3 slots in the EV+ versions, this one has 6.\n\nYou can use the battery slot and other extra slots in the GUI to store anything you like!\n\n[note]You can also consider using the steam multiblock instead if you want.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lHey DJ, Mix it!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    88
  ],
  "rewards": [],
  "tasks": []
}
