tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__HowtoGetSodium-AAAAAAAAAAAAAAAAAAACbQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 621,
  "prerequisites": [
    609
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A second source for sodium is glauconite ore or glauconite sand. This type of ore vein can be found at Y level 20-50.\n\nSoapstone and talc can be used for lubricant.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lHow to Get Sodium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    609
  ],
  "rewards": [],
  "tasks": []
}
