tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__IC2Battery-AAAAAAAAAAAAAAAAAAACbA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 620,
  "prerequisites": [
    617
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A few recipes require IC2 batteries. Fill your small battery hull with some molten redstone and you'll get an RE-Battery.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lIC2 Battery",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    617
  ],
  "rewards": [],
  "tasks": []
}
