tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__IGuessitsanInkje-AAAAAAAAAAAAAAAAAAAHAA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1792,
  "prerequisites": [
    767
  ],
  "properties": {
    "auto_claim": false,
    "desc": "When you use the seismic prospector, you'll need a scanner and a printer to create the books full of tasty ores and delicious fluids.\n\nUse ink sacs in a fluid extractor to get squid ink. Then move it using pipes or cells.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lI Guess it's an Inkjet?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    767
  ],
  "rewards": [],
  "tasks": []
}
