tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__LPG-AAAAAAAAAAAAAAAAAAACgA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 640,
  "prerequisites": [
    840
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Centrifuging Butane or Propane gives you LPG with a burn value of 320,000 EU.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lLPG",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    840
  ],
  "rewards": [],
  "tasks": []
}
