tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__LVExtruder-AAAAAAAAAAAAAAAAAAACoQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 673,
  "prerequisites": [
    95
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The extruder is not very useful in LV. But it will extrude your next tier of boat, make rubber sheets more efficiently, get you extra fluid cells, or make §osome§r Tinkers Construct tool parts.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lLV Extruder",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    95
  ],
  "rewards": [],
  "tasks": []
}
